test/libyul/yulSyntaxTests/hex_expression.yul
{
    pop(hex"2233")
}
// ----
// ParserError 3772: (10-19): Hex literals are not valid in this context.
